kawa/kawaparser.automaton
State 0:
## Known stack suffix:
##
## LR(1) items:
program' -> . program [ # ]
## Transitions:
-- On VAR shift to state 1
-- On vardef shift to state 9
-- On program shift to state 11
-- On list(vardef) shift to state 12
## Reductions:
-- On MAIN CLASS
--   reduce production list(vardef) ->

State 1:
## Known stack suffix:
## VAR
## LR(1) items:
vardef -> VAR . typ IDENT SEMI [ WHILE VAR THIS RETURN PRINT NOT NEW MINUS MAIN LPAR INT IF IDENT END CLASS BOOL ]
## Transitions:
-- On TVOID shift to state 2
-- On TINT shift to state 3
-- On TBOOL shift to state 4
-- On IDENT shift to state 5
-- On typ shift to state 6
## Reductions:

State 2:
## Known stack suffix:
## TVOID
## LR(1) items:
typ -> TVOID . [ IDENT ]
## Transitions:
## Reductions:
-- On IDENT
--   reduce production typ -> TVOID

State 3:
## Known stack suffix:
## TINT
## LR(1) items:
typ -> TINT . [ IDENT ]
## Transitions:
## Reductions:
-- On IDENT
--   reduce production typ -> TINT

State 4:
## Known stack suffix:
## TBOOL
## LR(1) items:
typ -> TBOOL . [ IDENT ]
## Transitions:
## Reductions:
-- On IDENT
--   reduce production typ -> TBOOL

State 5:
## Known stack suffix:
## IDENT
## LR(1) items:
typ -> IDENT . [ IDENT ]
## Transitions:
## Reductions:
-- On IDENT
--   reduce production typ -> IDENT

State 6:
## Known stack suffix:
## VAR typ
## LR(1) items:
vardef -> VAR typ . IDENT SEMI [ WHILE VAR THIS RETURN PRINT NOT NEW MINUS MAIN LPAR INT IF IDENT END CLASS BOOL ]
## Transitions:
-- On IDENT shift to state 7
## Reductions:

State 7:
## Known stack suffix:
## VAR typ IDENT
## LR(1) items:
vardef -> VAR typ IDENT . SEMI [ WHILE VAR THIS RETURN PRINT NOT NEW MINUS MAIN LPAR INT IF IDENT END CLASS BOOL ]
## Transitions:
-- On SEMI shift to state 8
## Reductions:

State 8:
## Known stack suffix:
## VAR typ IDENT SEMI
## LR(1) items:
vardef -> VAR typ IDENT SEMI . [ WHILE VAR THIS RETURN PRINT NOT NEW MINUS MAIN LPAR INT IF IDENT END CLASS BOOL ]
## Transitions:
## Reductions:
-- On WHILE VAR THIS RETURN PRINT NOT NEW MINUS MAIN LPAR INT IF IDENT END CLASS BOOL
--   reduce production vardef -> VAR typ IDENT SEMI

State 9:
## Known stack suffix:
## vardef
## LR(1) items:
list(vardef) -> vardef . list(vardef) [ WHILE THIS RETURN PRINT NOT NEW MINUS MAIN LPAR INT IF IDENT END CLASS BOOL ]
## Transitions:
-- On VAR shift to state 1
-- On vardef shift to state 9
-- On list(vardef) shift to state 10
## Reductions:
-- On WHILE THIS RETURN PRINT NOT NEW MINUS MAIN LPAR INT IF IDENT END CLASS BOOL
--   reduce production list(vardef) ->

State 10:
## Known stack suffix:
## vardef list(vardef)
## LR(1) items:
list(vardef) -> vardef list(vardef) . [ WHILE THIS RETURN PRINT NOT NEW MINUS MAIN LPAR INT IF IDENT END CLASS BOOL ]
## Transitions:
## Reductions:
-- On WHILE THIS RETURN PRINT NOT NEW MINUS MAIN LPAR INT IF IDENT END CLASS BOOL
--   reduce production list(vardef) -> vardef list(vardef)

State 11:
## Known stack suffix:
## program
## LR(1) items:
program' -> program . [ # ]
## Transitions:
## Reductions:
-- On #
--   accept program

State 12:
## Known stack suffix:
## list(vardef)
## LR(1) items:
program -> list(vardef) . list(classdef) MAIN BEGIN list(instruction) END EOF [ # ]
## Transitions:
-- On CLASS shift to state 13
-- On list(classdef) shift to state 158
-- On classdef shift to state 164
## Reductions:
-- On MAIN
--   reduce production list(classdef) ->

State 13:
## Known stack suffix:
## CLASS
## LR(1) items:
classdef -> CLASS . IDENT BEGIN list(metatt) END [ MAIN CLASS ]
classdef -> CLASS . IDENT EXT IDENT BEGIN list(metatt) END [ MAIN CLASS ]
## Transitions:
-- On IDENT shift to state 14
## Reductions:

State 14:
## Known stack suffix:
## CLASS IDENT
## LR(1) items:
classdef -> CLASS IDENT . BEGIN list(metatt) END [ MAIN CLASS ]
classdef -> CLASS IDENT . EXT IDENT BEGIN list(metatt) END [ MAIN CLASS ]
## Transitions:
-- On EXT shift to state 15
-- On BEGIN shift to state 155
## Reductions:

State 15:
## Known stack suffix:
## CLASS IDENT EXT
## LR(1) items:
classdef -> CLASS IDENT EXT . IDENT BEGIN list(metatt) END [ MAIN CLASS ]
## Transitions:
-- On IDENT shift to state 16
## Reductions:

State 16:
## Known stack suffix:
## CLASS IDENT EXT IDENT
## LR(1) items:
classdef -> CLASS IDENT EXT IDENT . BEGIN list(metatt) END [ MAIN CLASS ]
## Transitions:
-- On BEGIN shift to state 17
## Reductions:

State 17:
## Known stack suffix:
## CLASS IDENT EXT IDENT BEGIN
## LR(1) items:
classdef -> CLASS IDENT EXT IDENT BEGIN . list(metatt) END [ MAIN CLASS ]
## Transitions:
-- On PUBLIC shift to state 18
-- On PROTECTED shift to state 19
-- On PRIVATE shift to state 20
-- On MET shift to state 21
-- On ATT shift to state 122
-- On method_ shift to state 130
-- On metatt shift to state 131
-- On list(metatt) shift to state 153
-- On attribute shift to state 133
-- On access shift to state 134
## Reductions:
-- On END
--   reduce production list(metatt) ->

State 18:
## Known stack suffix:
## PUBLIC
## LR(1) items:
access -> PUBLIC . [ MET ATT ]
## Transitions:
## Reductions:
-- On MET ATT
--   reduce production access -> PUBLIC

State 19:
## Known stack suffix:
## PROTECTED
## LR(1) items:
access -> PROTECTED . [ MET ATT ]
## Transitions:
## Reductions:
-- On MET ATT
--   reduce production access -> PROTECTED

State 20:
## Known stack suffix:
## PRIVATE
## LR(1) items:
access -> PRIVATE . [ MET ATT ]
## Transitions:
## Reductions:
-- On MET ATT
--   reduce production access -> PRIVATE

State 21:
## Known stack suffix:
## MET
## LR(1) items:
method_ -> MET . typ IDENT LPAR loption(separated_nonempty_list(COMMA,typed_id)) RPAR BEGIN list(vardef) list(instruction) END [ PUBLIC PROTECTED PRIVATE MET END ATT ]
## Transitions:
-- On TVOID shift to state 2
-- On TINT shift to state 3
-- On TBOOL shift to state 4
-- On IDENT shift to state 5
-- On typ shift to state 22
## Reductions:

State 22:
## Known stack suffix:
## MET typ
## LR(1) items:
method_ -> MET typ . IDENT LPAR loption(separated_nonempty_list(COMMA,typed_id)) RPAR BEGIN list(vardef) list(instruction) END [ PUBLIC PROTECTED PRIVATE MET END ATT ]
## Transitions:
-- On IDENT shift to state 23
## Reductions:

State 23:
## Known stack suffix:
## MET typ IDENT
## LR(1) items:
method_ -> MET typ IDENT . LPAR loption(separated_nonempty_list(COMMA,typed_id)) RPAR BEGIN list(vardef) list(instruction) END [ PUBLIC PROTECTED PRIVATE MET END ATT ]
## Transitions:
-- On LPAR shift to state 24
## Reductions:

State 24:
## Known stack suffix:
## MET typ IDENT LPAR
## LR(1) items:
method_ -> MET typ IDENT LPAR . loption(separated_nonempty_list(COMMA,typed_id)) RPAR BEGIN list(vardef) list(instruction) END [ PUBLIC PROTECTED PRIVATE MET END ATT ]
## Transitions:
-- On TVOID shift to state 2
-- On TINT shift to state 3
-- On TBOOL shift to state 4
-- On IDENT shift to state 5
-- On typed_id shift to state 25
-- On typ shift to state 27
-- On separated_nonempty_list(COMMA,typed_id) shift to state 30
-- On loption(separated_nonempty_list(COMMA,typed_id)) shift to state 31
## Reductions:
-- On RPAR
--   reduce production loption(separated_nonempty_list(COMMA,typed_id)) ->

State 25:
## Known stack suffix:
## typed_id
## LR(1) items:
separated_nonempty_list(COMMA,typed_id) -> typed_id . [ RPAR ]
separated_nonempty_list(COMMA,typed_id) -> typed_id . COMMA separated_nonempty_list(COMMA,typed_id) [ RPAR ]
## Transitions:
-- On COMMA shift to state 26
## Reductions:
-- On RPAR
--   reduce production separated_nonempty_list(COMMA,typed_id) -> typed_id

State 26:
## Known stack suffix:
## typed_id COMMA
## LR(1) items:
separated_nonempty_list(COMMA,typed_id) -> typed_id COMMA . separated_nonempty_list(COMMA,typed_id) [ RPAR ]
## Transitions:
-- On TVOID shift to state 2
-- On TINT shift to state 3
-- On TBOOL shift to state 4
-- On IDENT shift to state 5
-- On typed_id shift to state 25
-- On typ shift to state 27
-- On separated_nonempty_list(COMMA,typed_id) shift to state 29
## Reductions:

State 27:
## Known stack suffix:
## typ
## LR(1) items:
typed_id -> typ . IDENT [ RPAR COMMA ]
## Transitions:
-- On IDENT shift to state 28
## Reductions:

State 28:
## Known stack suffix:
## typ IDENT
## LR(1) items:
typed_id -> typ IDENT . [ RPAR COMMA ]
## Transitions:
## Reductions:
-- On RPAR COMMA
--   reduce production typed_id -> typ IDENT

State 29:
## Known stack suffix:
## typed_id COMMA separated_nonempty_list(COMMA,typed_id)
## LR(1) items:
separated_nonempty_list(COMMA,typed_id) -> typed_id COMMA separated_nonempty_list(COMMA,typed_id) . [ RPAR ]
## Transitions:
## Reductions:
-- On RPAR
--   reduce production separated_nonempty_list(COMMA,typed_id) -> typed_id COMMA separated_nonempty_list(COMMA,typed_id)

State 30:
## Known stack suffix:
## separated_nonempty_list(COMMA,typed_id)
## LR(1) items:
loption(separated_nonempty_list(COMMA,typed_id)) -> separated_nonempty_list(COMMA,typed_id) . [ RPAR ]
## Transitions:
## Reductions:
-- On RPAR
--   reduce production loption(separated_nonempty_list(COMMA,typed_id)) -> separated_nonempty_list(COMMA,typed_id)

State 31:
## Known stack suffix:
## MET typ IDENT LPAR loption(separated_nonempty_list(COMMA,typed_id))
## LR(1) items:
method_ -> MET typ IDENT LPAR loption(separated_nonempty_list(COMMA,typed_id)) . RPAR BEGIN list(vardef) list(instruction) END [ PUBLIC PROTECTED PRIVATE MET END ATT ]
## Transitions:
-- On RPAR shift to state 32
## Reductions:

State 32:
## Known stack suffix:
## MET typ IDENT LPAR loption(separated_nonempty_list(COMMA,typed_id)) RPAR
## LR(1) items:
method_ -> MET typ IDENT LPAR loption(separated_nonempty_list(COMMA,typed_id)) RPAR . BEGIN list(vardef) list(instruction) END [ PUBLIC PROTECTED PRIVATE MET END ATT ]
## Transitions:
-- On BEGIN shift to state 33
## Reductions:

State 33:
## Known stack suffix:
## MET typ IDENT LPAR loption(separated_nonempty_list(COMMA,typed_id)) RPAR BEGIN
## LR(1) items:
method_ -> MET typ IDENT LPAR loption(separated_nonempty_list(COMMA,typed_id)) RPAR BEGIN . list(vardef) list(instruction) END [ PUBLIC PROTECTED PRIVATE MET END ATT ]
## Transitions:
-- On VAR shift to state 1
-- On vardef shift to state 9
-- On list(vardef) shift to state 34
## Reductions:
-- On WHILE THIS RETURN PRINT NOT NEW MINUS LPAR INT IF IDENT END BOOL
--   reduce production list(vardef) ->

State 34:
## Known stack suffix:
## MET typ IDENT LPAR loption(separated_nonempty_list(COMMA,typed_id)) RPAR BEGIN list(vardef)
## LR(1) items:
method_ -> MET typ IDENT LPAR loption(separated_nonempty_list(COMMA,typed_id)) RPAR BEGIN list(vardef) . list(instruction) END [ PUBLIC PROTECTED PRIVATE MET END ATT ]
## Transitions:
-- On WHILE shift to state 35
-- On THIS shift to state 37
-- On RETURN shift to state 92
-- On PRINT shift to state 95
-- On NOT shift to state 38
-- On NEW shift to state 39
-- On MINUS shift to state 42
-- On LPAR shift to state 43
-- On INT shift to state 44
-- On IF shift to state 100
-- On IDENT shift to state 45
-- On BOOL shift to state 46
-- On mem shift to state 105
-- On list(instruction) shift to state 120
-- On instruction shift to state 115
-- On expression shift to state 117
## Reductions:
-- On END
--   reduce production list(instruction) ->

State 35:
## Known stack suffix:
## WHILE
## LR(1) items:
instruction -> WHILE . LPAR expression RPAR BEGIN list(instruction) END [ WHILE THIS RETURN PRINT NOT NEW MINUS LPAR INT IF IDENT END BOOL ]
## Transitions:
-- On LPAR shift to state 36
## Reductions:

State 36:
## Known stack suffix:
## WHILE LPAR
## LR(1) items:
instruction -> WHILE LPAR . expression RPAR BEGIN list(instruction) END [ WHILE THIS RETURN PRINT NOT NEW MINUS LPAR INT IF IDENT END BOOL ]
## Transitions:
-- On THIS shift to state 37
-- On NOT shift to state 38
-- On NEW shift to state 39
-- On MINUS shift to state 42
-- On LPAR shift to state 43
-- On INT shift to state 44
-- On IDENT shift to state 45
-- On BOOL shift to state 46
-- On mem shift to state 47
-- On expression shift to state 89
## Reductions:

State 37:
## Known stack suffix:
## THIS
## LR(1) items:
expression -> THIS . [ SUPE SUP STAR SEMI RPAR PLUS OR MOD MINUS INFE INF EQ DOT DIV DIF COMMA AND ]
## Transitions:
## Reductions:
-- On SUPE SUP STAR SEMI RPAR PLUS OR MOD MINUS INFE INF EQ DOT DIV DIF COMMA AND
--   reduce production expression -> THIS

State 38:
## Known stack suffix:
## NOT
## LR(1) items:
expression -> NOT . expression [ SUPE SUP STAR SEMI RPAR PLUS OR MOD MINUS INFE INF EQ DOT DIV DIF COMMA AND ]
## Transitions:
-- On THIS shift to state 37
-- On NOT shift to state 38
-- On NEW shift to state 39
-- On MINUS shift to state 42
-- On LPAR shift to state 43
-- On INT shift to state 44
-- On IDENT shift to state 45
-- On BOOL shift to state 46
-- On mem shift to state 47
-- On expression shift to state 88
## Reductions:

State 39:
## Known stack suffix:
## NEW
## LR(1) items:
expression -> NEW . IDENT LPAR loption(separated_nonempty_list(COMMA,expression)) RPAR [ SUPE SUP STAR SEMI RPAR PLUS OR MOD MINUS INFE INF EQ DOT DIV DIF COMMA AND ]
expression -> NEW . IDENT [ SUPE SUP STAR SEMI RPAR PLUS OR MOD MINUS INFE INF EQ DOT DIV DIF COMMA AND ]
## Transitions:
-- On IDENT shift to state 40
## Reductions:

State 40:
## Known stack suffix:
## NEW IDENT
## LR(1) items:
expression -> NEW IDENT . LPAR loption(separated_nonempty_list(COMMA,expression)) RPAR [ SUPE SUP STAR SEMI RPAR PLUS OR MOD MINUS INFE INF EQ DOT DIV DIF COMMA AND ]
expression -> NEW IDENT . [ SUPE SUP STAR SEMI RPAR PLUS OR MOD MINUS INFE INF EQ DOT DIV DIF COMMA AND ]
## Transitions:
-- On LPAR shift to state 41
## Reductions:
-- On SUPE SUP STAR SEMI RPAR PLUS OR MOD MINUS INFE INF EQ DOT DIV DIF COMMA AND
--   reduce production expression -> NEW IDENT

State 41:
## Known stack suffix:
## NEW IDENT LPAR
## LR(1) items:
expression -> NEW IDENT LPAR . loption(separated_nonempty_list(COMMA,expression)) RPAR [ SUPE SUP STAR SEMI RPAR PLUS OR MOD MINUS INFE INF EQ DOT DIV DIF COMMA AND ]
## Transitions:
-- On THIS shift to state 37
-- On NOT shift to state 38
-- On NEW shift to state 39
-- On MINUS shift to state 42
-- On LPAR shift to state 43
-- On INT shift to state 44
-- On IDENT shift to state 45
-- On BOOL shift to state 46
-- On separated_nonempty_list(COMMA,expression) shift to state 54
-- On mem shift to state 47
-- On loption(separated_nonempty_list(COMMA,expression)) shift to state 86
-- On expression shift to state 57
## Reductions:
-- On RPAR
--   reduce production loption(separated_nonempty_list(COMMA,expression)) ->

State 42:
## Known stack suffix:
## MINUS
## LR(1) items:
expression -> MINUS . expression [ SUPE SUP STAR SEMI RPAR PLUS OR MOD MINUS INFE INF EQ DOT DIV DIF COMMA AND ]
## Transitions:
-- On THIS shift to state 37
-- On NOT shift to state 38
-- On NEW shift to state 39
-- On MINUS shift to state 42
-- On LPAR shift to state 43
-- On INT shift to state 44
-- On IDENT shift to state 45
-- On BOOL shift to state 46
-- On mem shift to state 47
-- On expression shift to state 85
## Reductions:

State 43:
## Known stack suffix:
## LPAR
## LR(1) items:
expression -> LPAR . expression RPAR [ SUPE SUP STAR SEMI RPAR PLUS OR MOD MINUS INFE INF EQ DOT DIV DIF COMMA AND ]
## Transitions:
-- On THIS shift to state 37
-- On NOT shift to state 38
-- On NEW shift to state 39
-- On MINUS shift to state 42
-- On LPAR shift to state 43
-- On INT shift to state 44
-- On IDENT shift to state 45
-- On BOOL shift to state 46
-- On mem shift to state 47
-- On expression shift to state 48
## Reductions:

State 44:
## Known stack suffix:
## INT
## LR(1) items:
expression -> INT . [ SUPE SUP STAR SEMI RPAR PLUS OR MOD MINUS INFE INF EQ DOT DIV DIF COMMA AND ]
## Transitions:
## Reductions:
-- On SUPE SUP STAR SEMI RPAR PLUS OR MOD MINUS INFE INF EQ DOT DIV DIF COMMA AND
--   reduce production expression -> INT

State 45:
## Known stack suffix:
## IDENT
## LR(1) items:
mem -> IDENT . [ SUPE SUP STAR SEMI RPAR PLUS OR MOD MINUS INFE INF EQ DOT DIV DIF COMMA AND AFF ]
## Transitions:
## Reductions:
-- On SUPE SUP STAR SEMI RPAR PLUS OR MOD MINUS INFE INF EQ DOT DIV DIF COMMA AND AFF
--   reduce production mem -> IDENT

State 46:
## Known stack suffix:
## BOOL
## LR(1) items:
expression -> BOOL . [ SUPE SUP STAR SEMI RPAR PLUS OR MOD MINUS INFE INF EQ DOT DIV DIF COMMA AND ]
## Transitions:
## Reductions:
-- On SUPE SUP STAR SEMI RPAR PLUS OR MOD MINUS INFE INF EQ DOT DIV DIF COMMA AND
--   reduce production expression -> BOOL

State 47:
## Known stack suffix:
## mem
## LR(1) items:
expression -> mem . [ SUPE SUP STAR SEMI RPAR PLUS OR MOD MINUS INFE INF EQ DOT DIV DIF COMMA AND ]
## Transitions:
## Reductions:
-- On SUPE SUP STAR SEMI RPAR PLUS OR MOD MINUS INFE INF EQ DOT DIV DIF COMMA AND
--   reduce production expression -> mem

State 48:
## Known stack suffix:
## LPAR expression
## LR(1) items:
expression -> LPAR expression . RPAR [ SUPE SUP STAR SEMI RPAR PLUS OR MOD MINUS INFE INF EQ DOT DIV DIF COMMA AND ]
expression -> expression . PLUS expression [ SUPE SUP STAR RPAR PLUS OR MOD MINUS INFE INF EQ DOT DIV DIF AND ]
expression -> expression . MINUS expression [ SUPE SUP STAR RPAR PLUS OR MOD MINUS INFE INF EQ DOT DIV DIF AND ]
expression -> expression . STAR expression [ SUPE SUP STAR RPAR PLUS OR MOD MINUS INFE INF EQ DOT DIV DIF AND ]
expression -> expression . DIF expression [ SUPE SUP STAR RPAR PLUS OR MOD MINUS INFE INF EQ DOT DIV DIF AND ]
expression -> expression . EQ expression [ SUPE SUP STAR RPAR PLUS OR MOD MINUS INFE INF EQ DOT DIV DIF AND ]
expression -> expression . INF expression [ SUPE SUP STAR RPAR PLUS OR MOD MINUS INFE INF EQ DOT DIV DIF AND ]
expression -> expression . INFE expression [ SUPE SUP STAR RPAR PLUS OR MOD MINUS INFE INF EQ DOT DIV DIF AND ]
expression -> expression . SUP expression [ SUPE SUP STAR RPAR PLUS OR MOD MINUS INFE INF EQ DOT DIV DIF AND ]
expression -> expression . SUPE expression [ SUPE SUP STAR RPAR PLUS OR MOD MINUS INFE INF EQ DOT DIV DIF AND ]
expression -> expression . AND expression [ SUPE SUP STAR RPAR PLUS OR MOD MINUS INFE INF EQ DOT DIV DIF AND ]
expression -> expression . OR expression [ SUPE SUP STAR RPAR PLUS OR MOD MINUS INFE INF EQ DOT DIV DIF AND ]
expression -> expression . MOD expression [ SUPE SUP STAR RPAR PLUS OR MOD MINUS INFE INF EQ DOT DIV DIF AND ]
expression -> expression . DIV expression [ SUPE SUP STAR RPAR PLUS OR MOD MINUS INFE INF EQ DOT DIV DIF AND ]
expression -> expression . DOT IDENT LPAR loption(separated_nonempty_list(COMMA,expression)) RPAR [ SUPE SUP STAR RPAR PLUS OR MOD MINUS INFE INF EQ DOT DIV DIF AND ]
mem -> expression . DOT IDENT [ SUPE SUP STAR RPAR PLUS OR MOD MINUS INFE INF EQ DOT DIV DIF AND ]
## Transitions:
-- On SUPE shift to state 49
-- On SUP shift to state 58
-- On STAR shift to state 60
-- On RPAR shift to state 84
-- On PLUS shift to state 66
-- On OR shift to state 72
-- On MOD shift to state 68
-- On MINUS shift to state 74
-- On INFE shift to state 62
-- On INF shift to state 64
-- On EQ shift to state 76
-- On DOT shift to state 51
-- On DIV shift to state 70
-- On DIF shift to state 78
-- On AND shift to state 80
## Reductions:

State 49:
## Known stack suffix:
## expression SUPE
## LR(1) items:
expression -> expression SUPE . expression [ SUPE SUP STAR SEMI RPAR PLUS OR MOD MINUS INFE INF EQ DOT DIV DIF COMMA AND ]
## Transitions:
-- On THIS shift to state 37
-- On NOT shift to state 38
-- On NEW shift to state 39
-- On MINUS shift to state 42
-- On LPAR shift to state 43
-- On INT shift to state 44
-- On IDENT shift to state 45
-- On BOOL shift to state 46
-- On mem shift to state 47
-- On expression shift to state 50
## Reductions:

State 50:
## Known stack suffix:
## expression SUPE expression
## LR(1) items:
expression -> expression . PLUS expression [ SUPE SUP STAR SEMI RPAR PLUS OR MOD MINUS INFE INF EQ DOT DIV DIF COMMA AND ]
expression -> expression . MINUS expression [ SUPE SUP STAR SEMI RPAR PLUS OR MOD MINUS INFE INF EQ DOT DIV DIF COMMA AND ]
expression -> expression . STAR expression [ SUPE SUP STAR SEMI RPAR PLUS OR MOD MINUS INFE INF EQ DOT DIV DIF COMMA AND ]
expression -> expression . DIF expression [ SUPE SUP STAR SEMI RPAR PLUS OR MOD MINUS INFE INF EQ DOT DIV DIF COMMA AND ]
expression -> expression . EQ expression [ SUPE SUP STAR SEMI RPAR PLUS OR MOD MINUS INFE INF EQ DOT DIV DIF COMMA AND ]
expression -> expression . INF expression [ SUPE SUP STAR SEMI RPAR PLUS OR MOD MINUS INFE INF EQ DOT DIV DIF COMMA AND ]
expression -> expression . INFE expression [ SUPE SUP STAR SEMI RPAR PLUS OR MOD MINUS INFE INF EQ DOT DIV DIF COMMA AND ]
expression -> expression . SUP expression [ SUPE SUP STAR SEMI RPAR PLUS OR MOD MINUS INFE INF EQ DOT DIV DIF COMMA AND ]
expression -> expression . SUPE expression [ SUPE SUP STAR SEMI RPAR PLUS OR MOD MINUS INFE INF EQ DOT DIV DIF COMMA AND ]
expression -> expression SUPE expression . [ SUPE SUP STAR SEMI RPAR PLUS OR MOD MINUS INFE INF EQ DOT DIV DIF COMMA AND ]
expression -> expression . AND expression [ SUPE SUP STAR SEMI RPAR PLUS OR MOD MINUS INFE INF EQ DOT DIV DIF COMMA AND ]
expression -> expression . OR expression [ SUPE SUP STAR SEMI RPAR PLUS OR MOD MINUS INFE INF EQ DOT DIV DIF COMMA AND ]
expression -> expression . MOD expression [ SUPE SUP STAR SEMI RPAR PLUS OR MOD MINUS INFE INF EQ DOT DIV DIF COMMA AND ]
expression -> expression . DIV expression [ SUPE SUP STAR SEMI RPAR PLUS OR MOD MINUS INFE INF EQ DOT DIV DIF COMMA AND ]
expression -> expression . DOT IDENT LPAR loption(separated_nonempty_list(COMMA,expression)) RPAR [ SUPE SUP STAR SEMI RPAR PLUS OR MOD MINUS INFE INF EQ DOT DIV DIF COMMA AND ]
mem -> expression . DOT IDENT [ SUPE SUP STAR SEMI RPAR PLUS OR MOD MINUS INFE INF EQ DOT DIV DIF COMMA AND ]
## Transitions:
-- On DOT shift to state 51
## Reductions:
-- On STAR SEMI RPAR PLUS OR MOD MINUS EQ DIV DIF COMMA AND
--   reduce production expression -> expression SUPE expression

State 51:
## Known stack suffix:
## expression DOT
## LR(1) items:
expression -> expression DOT . IDENT LPAR loption(separated_nonempty_list(COMMA,expression)) RPAR [ SUPE SUP STAR SEMI RPAR PLUS OR MOD MINUS INFE INF EQ DOT DIV DIF COMMA AND ]
mem -> expression DOT . IDENT [ SUPE SUP STAR SEMI RPAR PLUS OR MOD MINUS INFE INF EQ DOT DIV DIF COMMA AND AFF ]
## Transitions:
-- On IDENT shift to state 52
## Reductions:

State 52:
## Known stack suffix:
## expression DOT IDENT
## LR(1) items:
expression -> expression DOT IDENT . LPAR loption(separated_nonempty_list(COMMA,expression)) RPAR [ SUPE SUP STAR SEMI RPAR PLUS OR MOD MINUS INFE INF EQ DOT DIV DIF COMMA AND ]
mem -> expression DOT IDENT . [ SUPE SUP STAR SEMI RPAR PLUS OR MOD MINUS INFE INF EQ DOT DIV DIF COMMA AND AFF ]
## Transitions:
-- On LPAR shift to state 53
## Reductions:
